2009-08-27  Lars Hartmann  <lars (at) chaotika (dot) org>

        Cleaned up test for lparchive:
        * test/05_lparchives.c: replaced multiple bailout-code with goto.

	Fixed Compile error:
	* test/05_lparchives.c (test_lparchives_extract): fixed syntax error.

	Fixed bug only occuring in make distcheck, because autotools do
	set crazy file permissions:
	* test/05_lparchives.c : added workaround.

	Fixed "cant make target whatever/libportage.la" error:
	* test/Makefile.am: added relative paths.

	Fixed SIGABRT in test:
	* test/05_lparchives.c (test_lparchives_extract): one should
	return if an error has occured ;-).

2009-08-26  Lars Hartmann  <lars (at) chaotika (dot) org>

	Changed bug email-address:
	* configure.ac: changed email-address.

	* test/valgrind-wrapper: removed.
	* test/Makefile.am (METASOURCES): removed valgrind wrapper.
	switched to old libtool based tests.
	* configure.ac: removed valgrind hacks.
	removed ugly libtool-hack.
	* replace/replace.h : included stdlib.h to fix a bug on some
	systems which actually need those replace functions.
	added include-guards.

2009-06-22  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added asciidoc support to build framework:
	* doc/Makefile.am: added build options.
	* configure.ac: added an --enable-asciidoc switch and checks for
	asciidoc(1) and a2x(1).

	Removed obsolete non-asciidoc files:
	* doc/xpak.5: removed.
	* doc/xpak.txt: removed.
	* doc/xpak.html: removed.
	* doc/Makefile.am: removed xpak.txt and xpak.html from doc_DATA
	and EXTRA_DIST.

	* doc/Makefile.am (EXTRA_DIST): added asciidoc file to
	distribution.

2009-06-10  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: replaced bash code by POSIX sh code.

	* doc/xpak.5.txt: rewritten doc/xpak.txt in asciidoc.
	added "DEDICATED TO" section.
	added "CREDITS" section.

2009-06-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* release.sh: removed lzma distribution and added zip
	distribution.
